-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
5.3.0 RC1
-
None
-
Mac 10.9.3
When I try to run a modal QProgressDialog during the main event loop the dialog gets stuck. The call to setValue doesn't return. The attached sample shows the problem. This used to work with Qt 4.
- is replaced by
-
QTBUG-38214 REGRESSION: Modal dialogs do not receive focus
-
- Closed
-
- resulted from
-
QTBUG-34677 GetOpenFileName does not close using QT 5.1.1 or QT 5.2RC framework on Mac OS X.9
-
- Closed
-