Disable QProgressDialog on QT5.3 Mac

.. until they fix QTBUG-39038
   see: https://bugreports.qt-project.org/browse/QTBUG-39038