src/MetricAggregator.cpp
@@ -512,13 +512,15 @@ MetricAggregator::refreshCPModelMetrics()
 
     // if we have a progress dialog lets update the bar to show
     // progress for the model parameters
-    QProgressDialog *bar = new QProgressDialog(tr("Update Model Estimates"), tr("Abort"), 0, (lastYear*12 + lastMonth) - (year*12 + month));
+#if (!defined Q_OS_MAC) || (QT_VERSION < 0x050300) // QTBUG 39038 !!!
+    QProgressDialog *bar = new QProgressDialog(tr("Update Model Estimates"), tr("Abort"), 1, (lastYear*12 + lastMonth) - (year*12 + month));
     bar->setWindowFlags(bar->windowFlags() | Qt::FramelessWindowHint);
     bar->setWindowModality(Qt::WindowModal);
     bar->setMinimumDuration(0);
-    bar->setValue(0);
+    bar->setValue(1);
     bar->show(); // lets hide until elapsed time is > 6 seconds
     QApplication::processEvents();
+#endif
 
     QList< QVector<float> > months;
 
@@ -602,8 +604,12 @@ MetricAggregator::refreshCPModelMetrics()
             month ++;
         }
 
+#if (!defined Q_OS_MAC) || (QT_VERSION < 0x050300)
         // show some progress
         bar->setValue(count);
+#endif
     }
+#if (!defined Q_OS_MAC) || (QT_VERSION < 0x050300)
     delete bar;
+#endif
 }
